--- a/INSTALL
+++ b/INSTALL
@@ -1,2 +1,8 @@
-Point your browser to http://drop.org/module.php?mod=documentation 
-and read the installation guidelines.
+
+* http://drop.org/module.php?mod=documentation
+   - online installation guidelines
+
+* http://drop.org/module.php?mod=drupal
+   - drupal project page
+
+  
