- documentation updates contributed by Michael O'Henly <michael@tenzo.com>   and myself

--- a/INSTALL
+++ b/INSTALL
@@ -3,6 +3,7 @@
    - online installation guidelines
 
 * http://drop.org/module.php?mod=drupal
-   - drupal project page
+   - drupal project page if you would like to get involved in the
+     ongoing development
 
 
