--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,8 +16,9 @@ drupal 1.xx, xx/xx/2001
     * you can setup multiple drupal sites on top of the same physical source
       tree either by using vhosts or sub-directories
 - added "user ratings" similar to SlashCode's karma or Scoop's mojo.
-- added search infractructure:
-    * better search page + search functionality in administration pages.
+- added "search infractructure":
+    * improved search page and integrated search functionality in the
+      administration pages.
 - various updates:
     * improved cron-module
     * improved module-module
