- added fine-grained user permission system which allows us to give   certain users access to specific administration sections only.     Ex. a FAQ maintainer can only edit the FAQ, and members of an         "editorial board" can only edit comments, diaries and          stories, .. - code review => rewrote include/user.inc which is much easier now - fixed 4 small bugs

--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,5 @@
    - online installation guidelines
 
 * http://drop.org/module.php?mod=drupal
-   - drupal project page if you would like to get involved in the
+   - drupal project page for those willing to get involved in the
      ongoing development
-
-
