- large commit of everything else that has been queued in my backlog:   it's not 100% stable yet

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+drupal x.xx, xx/xx/xxxx
+-----------------------
+- major overhaul of the underlying design:
+    * everything is based on nodes
+    * introduced links / drupal tags
+- refactored submission / moderation queue
+- added a "wiki module"
+- various updates:
+    * added preview functionality when submitting new content (such as a story) from the administration pages.
+    * made the administration section only show those links a user has access to.
+
 drupal 2.00, 15/03/2001
 -----------------------
 - rewrote the comment/discussion code:
