--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,7 +11,7 @@ drupal x.xx, xx/xx/xxxx
 - removed ban module and integrated it in account.module as "access control":
     * access control is based on much more powerful regular expressions (regex) now rather than on MySQL pattern matching.
 - rewrote watchdog and submission throttle
-- rewrote section code
+- rewrote section code and renamed it to structure.module
 - added settings.module:
     * moved most configuration options to the administration section
 - added page.module:
@@ -20,7 +20,7 @@ drupal x.xx, xx/xx/xxxx
     * added preview functionality when submitting new content (such as a story) from the administration pages.
     * made the administration section only show those links a user has access to.
     * improved account module:
-        + added "acess control" to allow/deny certain usernames/e-mail addresses/hostnames
+        + added "access control" to allow/deny certain usernames/e-mail addresses/hostnames
     * improved comment module
     * improved rating module
     * improved story module:
@@ -30,7 +30,7 @@ drupal x.xx, xx/xx/xxxx
         + W3C validation on a best effort basis
         + removed $theme->control() from themes
         + added theme "goofy"
-- collaborativly revised and expanded documentation
+- collaboratively revised and expanded documentation
 
 drupal 2.00, 15/03/2001
 -----------------------
@@ -43,7 +43,7 @@ drupal 2.00, 15/03/2001
     * story sections make the open submission more adaptive in that you can set individual post, dump and expiration thresholds for each section according to the story type and urgency level: stories in certain sections do not "expire" and might stay interesting and active as time passes by, whereas news-related stories are only considered "hot" over a short period of time.
 - multiple vhosts + multiple directories:
     * you can setup multiple drupal sites on top of the same physical source tree either by using vhosts or sub-directories
-- added "user ratings" similar to SlashCode's karma or Scoop's mojo:
+- added "user ratings" similar to SlashCode's Karma or Scoop's Mojo:
     * all rating logic is packed into a module to ease experimenting with different rating heuristics/algorithms.
 - added "search infrastructure":
     * improved search page and integrated search functionality in the administration pages.
