--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,6 @@ drupal x.xx, xx/xx/xxxx
 -----------------------
 - major overhaul of the entire underlying design:
     * everything is based on nodes: nodes are a conceptual "black box" to couple and manage different types of content and that promotes reusing existing code, thus reducing the complexity and size of drupal as well as improving long-term stability.
-    * introduced links/drupal tags: [[link]]
 - rewrote submission/moderation queue:
     * renamed submission.module to moderation.module
     * updated submission forms
@@ -11,17 +10,26 @@ drupal x.xx, xx/xx/xxxx
 - removed ban module and integrated it in account.module as "access control":
     * access control is based on much more powerful regular expressions (regex) now rather than on MySQL pattern matching.
 - rewrote watchdog and submission throttle
-- rewrote section code and renamed it to structure.module
+- rewrote section code and renamed it to structure.module:
+    * supports both "categories" and "topics" (cfr. Scoop, SlashCode)
+    * added "auto-post new submissions" feature versus "moderate new submissions".
 - added settings.module:
     * moved most configuration options to the administration section
 - added page.module:
     * allows creation of static (and dynamic) pages through the administration interface
+- added help.module:
+    * groups all available documentation on installed modules on a single page.
+- added cvs.module and cvs-to-sql.pl:
+    * allows to display and mail CVS log messages as digests.
 - various updates:
+    * introduced links/drupal tags: [[link]]
     * added preview functionality when submitting new content (such as a story) from the administration pages.
     * made the administration section only show those links a user has access to.
+    * made all modules use specific form_* functions to guarantee a rock-solid forms and more consistent layout.
     * improved account module:
         + added "access control" to allow/deny certain usernames/e-mail addresses/hostnames
-    * improved comment module
+    * improved comment module:
+        + made it possible to permanently delete comments
     * improved rating module
     * improved story module:
         + added preview functionality for administrators
