--- a/CHANGELOG
+++ b/CHANGELOG
@@ -47,14 +47,14 @@ drupal x.xx, xx/xx/xxxx (CVS, unstable)
 drupal 2.00, 15/03/2001
 -----------------------
 - rewrote the comment/discussion code:
-    * comment navigation should be less confusing now
+    * comment navigation should be less confusing now.
     * additional/alternative display and order methods have been added.
     * modules can be extended with a "comment system": modules can embed the existing comment system without having to write their own, duplicate comment system.
 - added sections and section manager:
     * story sections can be maintained from the administration pages.
     * story sections make the open submission more adaptive in that you can set individual post, dump and expiration thresholds for each section according to the story type and urgency level: stories in certain sections do not "expire" and might stay interesting and active as time passes by, whereas news-related stories are only considered "hot" over a short period of time.
 - multiple vhosts + multiple directories:
-    * you can setup multiple drupal sites on top of the same physical source tree either by using vhosts or sub-directories
+    * you can setup multiple drupal sites on top of the same physical source tree either by using vhosts or sub-directories.
 - added "user ratings" similar to SlashCode's Karma or Scoop's Mojo:
     * all rating logic is packed into a module to ease experimenting with different rating heuristics/algorithms.
 - added "search infrastructure":
@@ -64,17 +64,17 @@ drupal 2.00, 15/03/2001
 - added fine-grained user permission (or group) system:
     * users can be granted access to specific administration sections.  Example: a FAQ maintainer can be given access to maintain the FAQ and translators can be given access to the translation pages.
 - added FAQ module
-- changed the "open submission queue" into a (optional) module
+- changed the "open submission queue" into a (optional) module.
 - various updates:
     * improved account module:
-        + user accounts can be deleted
-        + added fine-grained permission support
+        + user accounts can be deleted.
+        + added fine-grained permission support.
     * improved block module
     * improved cron module
     * improved diary module:
         + diary entries can be deleted
     * improved headline module:
-        + improved parser to support more "generic" RDF/RSS/XML backend
+        + improved parser to support more "generic" RDF/RSS/XML backend.
     * improved module module
     * improved watchdog module
     * improved database abstraction layer
