- Renamed syndication.module to import.module.
- Removed headline.module: it became obsolete.

- Removed backend.class: it became obsolete.

- Added export.module.

  For now, you can use:
    1. http://drupal/export.php?headlines.rss
    2. http://drupal/export.php?headlines.rdf

- Renamed export to export.php.

  For now, you can use:
    1. http://drupal/export.php?headlines.rss
    2. http://drupal/export.php?headlines.rdf

  Renaming this file has main 3 advantages:
    1. We no longer rely on .htaccess for being able to export.
    2. It is more conform with the general naming conventions.
    3. It removes a pseudo-hack with formatting the URI.

- Made import.module export blocks with feeds.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,8 @@ drupal x.xx, xx/xx/xxxx (CVS, unstable)
 - removed ban module and integrated it into account.module as "access control":
     * access control is based on much more powerful regular expressions (regex) now rather than on MySQL pattern matching.
 - rewrote watchdog and submission throttle
+- rewrote headline code and renamed it to import.module and export.module
+    * added a various new features compared with the old headline code.
 - rewrote section code and renamed it to structure.module:
     * supports both "categories" and "topics" (cfr. Scoop, SlashCode).  Topics can be nested to create a multi-level hierarchy.
     * added "auto-post new submissions" feature versus "moderate new submissions".
