- Added meta.module, an improved index.module that allows you to   associate different collections - think "combobox" here - with   different content types, all hardcoded references to "section"   have been removed and the admin-friendliness of the meta admin   section has been slightly improved.
  I'll keep working on it during the weekend - if time allows me
  to.  Moreover, I'll focus on the usability/user-friendlines of
  the meta admin section as well as graceful input-checking, and
  error-handling.

  Requires an SQL update, see updates/2.00-to-x.xx.sql!

  Index.module will be removed, or meta.module will be renamed as
  soon we can ditch one of them.  For now, having both coexist is
  not going to harm your setup and is useful to make a comparison
  and / or to migrate from index.module to meta.module.

  Index.module is de-coupled form the rest of the system so you
  will have to use meta.module after having upgraded.  You have
  been warned.

- Updated CHANGELOG.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,7 +12,8 @@ drupal x.xx, xx/xx/xxxx (CVS, unstable)
 - rewrote section code and renamed it to structure.module:
     * supports both "categories" and "topics" (cfr. Scoop, SlashCode).  Topics can be nested to create a multi-level hierarchy.
     * added "auto-post new submissions" feature versus "moderate new submissions".
-- renamed hostname.conf to conf.php for security's sake.
+- rewrote configuration file resolving:
+    * Drupal tries to locate a configuration file that matches your domainname or uses conf.php if the former failed.  Note also that the configuration files got renamed from .conf to .php for security's sake on mal-configured Drupal sites.
 - added poll.module.
 - added conf.module:
     * moved most of the configuration options from hostname.conf to the new administration section.
