- Updated the CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+drupal x.xx, xx/xx/xxxx
+-----------------------
+- rewrote the user system
+
 drupal 3.00, 15/09/2001
 -----------------------
 - major overhaul of the entire underlying design:
