- small update to the INSTALL file

--- a/INSTALL
+++ b/INSTALL
@@ -2,6 +2,6 @@
 * http://drop.org/node.php?title=drupal+handbook
    - online installation guidelines
 
-* http://drop.org/module.php?mod=drupal
-   - drupal project page for those willing to get involved in the
+* http://www.drupal.org/
+   - Drupal's project page for those willing to get involved in the
      ongoing development
